--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 commands:
-  - name: my-pipeline-execution
-    script: /path/to/my_pipeline.py
-    args: ["--option1", "value1", "--option2", "value2"]
-    description: "Execute the main data pipeline with configured parameters"
-    timeout: "5m"
+  - name: get-weather
+    script: curl
+    args: ["https://wttr.in/?format=3"]
+    description: "Get current weather information"
+    timeout: "10s"
   
   - name: echo-test
     script: echo
